<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.main.MusicFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/music_off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/music_off" />

        <Button
            android:id="@+id/music_pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/music_pause" />
    </LinearLayout>

    <Button

        android:id="@+id/music_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:text="@string/music_1" />

    <Button
        android:id="@+id/music_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:text="@string/music_2" />

    <Button
        android:id="@+id/music_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:text="@string/music_3" />


</LinearLayout>