<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:gravity="center"
    tools:context=".module.main.TimeFragment">

    <EditText
        android:id="@+id/time_input"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:hint="@string/time_hint"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/time_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_setting" />

    <Button
        android:id="@+id/syn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synchronization" />

</LinearLayout>