<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:rowCount="2"
    tools:context=".module.main.GeneralFragment">


    <TextView
        android:id="@+id/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:background="@drawable/divide"
        android:gravity="center"
        android:text="@string/light"/>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_weight="1"
        android:background="@drawable/divide"
        android:gravity="center"
        android:text="@string/time"/>


    <TextView
        android:id="@+id/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_weight="1"
        android:background="@drawable/divide"
        android:gravity="center"
        android:text="@string/music"/>

    <TextView
        android:id="@+id/motor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"
        android:layout_weight="1"
        android:background="@drawable/divide"
        android:gravity="center"
        android:text="@string/motor"/>


</GridLayout>